--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,10 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    maven{
+        name="getui-nexus"
+        url="http://mvn.gt.igexin.com/nexus/content/repositories/releases/"
+    }
 }
 
 dependencies {
@@ -21,6 +25,9 @@ dependencies {
     compile 'org.glassfish.jersey.containers:jersey-container-servlet:2.26-b03'
     // 也是一个 Json 解析库
     compile 'org.glassfish.jersey.media:jersey-media-json-jackson:2.26-b03'
+
+    // 个推SDK
+    compile 'com.gexin.platform:gexin-rp-sdk-http:4.0.1.9'
 
     // 数据库操作框架
     compile 'org.hibernate:hibernate-core:5.2.9.Final'
